cleans repo and code. updates repo to include html export of gephi network.

--- a/1 - identify organisations in the corpus/ner_flair.ipynb
+++ b/1 - identify organisations in the corpus/ner_flair.ipynb
@@ -48,6 +48,9 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('../util/') # import python preprocessing script\n",
+    "\n",
     "from flair.models import SequenceTagger\n",
     "from flair.data import Sentence\n",
     "from flair.tokenization import SegtokSentenceSplitter\n",
@@ -113,10 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "2c339fe7-a177-4425-85d1-3f1fc434d39c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     /Users/kodymoodley/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m preprocess_ner, lookup_correct_docid\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# preprocess data\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m:\n\u001b[1;32m      8\u001b[0m     data[key] \u001b[38;5;241m=\u001b[39m preprocess_ner(data[key], stopwords\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from preprocessing import preprocess_ner, lookup_correct_docid\n",
     "\n",
@@ -250,22 +274,6 @@
     "print(\"---\")\n",
     "print(\"Finished entire run at:-\", ct)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ec43aad-40f1-44ea-9eba-1f868d5f7608",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dac5037-f414-4a9c-be26-98f89d159853",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
