--- a/2 - cluster organisations and link them to the STM topics/word2vec-embeddings.ipynb
+++ b/2 - cluster organisations and link them to the STM topics/word2vec-embeddings.ipynb
@@ -38,16 +38,20 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('../util/') # import python preprocessing script\n",
+    "\n",
     "from pathlib import Path\n",
     "import os\n",
+    "from preprocessing import preprocess_word2vec\n",
+    "import json\n",
     "\n",
     "path = Path(os.getcwd())\n",
     "models_dir = os.path.join(path.parents[0], \"models\")\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
     "\n",
-    "from preprocessing import replace_ngrams_with_unigrams_curated_phrases, preprocess_word2vec\n",
-    "\n",
-    "# replace ngrams with single tokens\n",
-    "corpus = replace_ngrams_with_unigrams_curated_phrases()"
+    "with open(os.path.join(data_dir, \"processed_ngram_ner_data.json\")) as f:\n",
+    "    corpus = json.load(f)"
    ]
   },
   {
@@ -71,8 +75,7 @@
     "corpus_as_str = ''\n",
     "for key in corpus:\n",
     "    corpus_as_str += corpus[key] + '. '\n",
-    "    \n",
-    "# preprocess for word2vec\n",
+    "\n",
     "processed_corpus = preprocess_word2vec(corpus_as_str, custom_stopwords=None)"
    ]
   },
@@ -93,43 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gensim.models\n",
-    "model_200_10 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=200, window=10, workers=4, min_count=2, epochs=25)"
+    "import gensim.models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb87f21e-1156-44a1-b781-e3686f47d4bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_200_20 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=200, window=20, workers=4, min_count=2, epochs=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cb910b08-f67e-4e97-9247-00d6e6d279a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_200_30 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=200, window=30, workers=4, min_count=2, epochs=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8f8bf6fb-9274-424b-b639-9b6de6fa3732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_100_10 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=100, window=10, workers=4, min_count=2, epochs=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "ad2577a9-9fea-4e98-8e49-5b5422528335",
    "metadata": {},
    "outputs": [],
@@ -139,32 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0514e1b9-576d-4103-8f94-c7607881ca35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_200_40_30 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=200, window=40, workers=4, min_count=2, epochs=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "097f2a7c-7b34-4b82-94fb-0747eebec8e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_100_30 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=100, window=30, workers=4, min_count=2, epochs=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "18ce429d-e35d-404d-8ad2-5be7b5d2f1f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_100_40_30 = gensim.models.Word2Vec(sentences=processed_corpus, sg=1, vector_size=100, window=40, workers=4, min_count=2, epochs=30)"
    ]
   },
   {
@@ -179,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "2d030692-1dba-4346-b3b6-fad26db09818",
    "metadata": {},
    "outputs": [],
@@ -187,22 +139,10 @@
     "import tempfile\n",
     "\n",
     "with tempfile.NamedTemporaryFile(delete=False) as tmp:\n",
-    "    filepath_200_10 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-10.model')\n",
-    "    filepath_200_20 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-20.model')\n",
-    "    filepath_200_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-30.model')\n",
-    "    filepath_100_10 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-10.model')\n",
     "    filepath_100_20 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-20.model')\n",
     "    filepath_100_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-30.model')\n",
-    "    filepath_200_40_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-40-30.model')\n",
-    "    filepath_100_40_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-40-30.model')\n",
-    "    model_200_10.save(filepath_200_10)\n",
-    "    model_200_20.save(filepath_200_20)\n",
-    "    model_200_30.save(filepath_200_30)\n",
-    "    model_100_10.save(filepath_100_10)\n",
     "    model_100_20.save(filepath_100_20)\n",
-    "    model_100_30.save(filepath_100_30)\n",
-    "    model_200_40_30.save(filepath_200_40_30)\n",
-    "    model_100_40_30.save(filepath_100_40_30)"
+    "    model_100_30.save(filepath_100_30)"
    ]
   },
   {
@@ -217,181 +157,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1cd950d5-3496-41a3-9ba3-6e2468f96002",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vec_water = model.wv['water']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "6bcc8d2e-6ef1-40d9-90c3-6916ebb02617",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(vec_water)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "0662a040-3580-468d-bc32-39e7056cb2f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.wv.most_similar(positive=['adaptation'], topn=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "86c1e68e-c1ee-4015-9e90-100b001ff77a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for index, word in enumerate(model.wv.index_to_key):\n",
-    "#     if index == 10:\n",
-    "#         break\n",
-    "#     print(f\"word #{index}/{len(model.wv.index_to_key)} is {word}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "bba06676-73b2-495f-b21c-b48c263cba1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_testmodel = gensim.models.Word2Vec.load(filepath_100_10)\n",
-    "b_testmodel = gensim.models.Word2Vec.load(filepath_200_10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "dac947e3-96fb-4284-900b-0231097565f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('financing', 0.7322310209274292),\n",
-       " ('leverage', 0.7108215093612671),\n",
-       " ('non-concessional', 0.7107137441635132),\n",
-       " ('mezzanine', 0.6873796582221985),\n",
-       " ('blended', 0.6777296662330627),\n",
-       " ('repayable_finance', 0.6750354170799255),\n",
-       " ('crowd-in', 0.6733455061912537),\n",
-       " ('infrastruc-ture', 0.6724364161491394),\n",
-       " ('concessional', 0.6682285666465759),\n",
-       " ('concessionary', 0.6642774343490601),\n",
-       " ('commercial', 0.6617627143859863),\n",
-       " ('repayable', 0.6491576433181763),\n",
-       " ('private_infrastructure_development_group', 0.646681010723114),\n",
-       " ('investment', 0.6420419812202454),\n",
-       " ('mobilising', 0.6417251229286194),\n",
-       " ('repay-ment', 0.6297632455825806),\n",
-       " ('risk-management', 0.625847339630127),\n",
-       " ('risk-mitigation', 0.6249263286590576),\n",
-       " ('delmon', 0.6246047616004944),\n",
-       " ('sswsp', 0.6230606436729431)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a_testmodel.wv.most_similar(positive=['finance'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "915924eb-cdf9-49bf-afc9-94e0b9898e1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('financing', 0.652104377746582),\n",
-       " ('non-concessional', 0.5843335390090942),\n",
-       " ('mezzanine', 0.5741749405860901),\n",
-       " ('blend', 0.5659187436103821),\n",
-       " ('blended', 0.5621514916419983),\n",
-       " ('leverage', 0.561673104763031),\n",
-       " ('crowd-in', 0.5472071170806885),\n",
-       " ('repayable', 0.5443536639213562),\n",
-       " ('investment', 0.5376092195510864),\n",
-       " ('mobilize', 0.5322173833847046),\n",
-       " ('repay-ment', 0.5277232527732849),\n",
-       " ('organi-sations', 0.5272273421287537),\n",
-       " ('repaid', 0.5250483155250549),\n",
-       " ('de-risk', 0.5231276750564575),\n",
-       " ('sswsp', 0.5227317214012146),\n",
-       " ('non-earmarked', 0.5218403339385986),\n",
-       " ('infrastruc-ture', 0.5181378722190857),\n",
-       " ('concessionary', 0.5178442597389221),\n",
-       " ('commercial', 0.5167564749717712),\n",
-       " ('delmon', 0.5132759809494019)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b_testmodel.wv.most_similar(positive=['finance'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "8dc30485-49b0-4d5d-9b3c-b980ea1832f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_testmodel = gensim.models.Word2Vec.load(filepath_100_20)\n",
-    "d_testmodel = gensim.models.Word2Vec.load(filepath_200_20)"
+    "c_testmodel = gensim.models.Word2Vec.load(filepath_100_20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "3692fc78-1a00-4bbc-8cea-639c3db13b36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('financing', 0.7665867209434509),\n",
-       " ('commercial', 0.7176423668861389),\n",
-       " ('mezzanine', 0.7036367654800415),\n",
-       " ('blended', 0.6958461999893188),\n",
-       " ('investment', 0.6906468272209167),\n",
-       " ('non-concessional', 0.6781517267227173),\n",
-       " ('blend', 0.6725146174430847),\n",
-       " ('concessional', 0.6671544313430786),\n",
-       " ('repayable', 0.6667763590812683),\n",
-       " ('attract', 0.665846586227417),\n",
-       " ('leverage', 0.6639302372932434),\n",
-       " ('organi-sations', 0.6467216610908508),\n",
-       " ('debt', 0.6463366150856018),\n",
-       " ('mobilising', 0.6432472467422485),\n",
-       " ('vipa', 0.6408852338790894),\n",
-       " ('concessionary', 0.6321372985839844),\n",
-       " ('risk-management', 0.6316962242126465),\n",
-       " ('repay-ment', 0.6298185586929321),\n",
-       " ('loan', 0.6263399720191956),\n",
-       " ('repayable_finance', 0.6248188614845276)]"
+       "[('financing', 0.7480107545852661),\n",
+       " ('investment', 0.7048020362854004),\n",
+       " ('commercial', 0.7008841633796692),\n",
+       " ('concessional', 0.6848236918449402),\n",
+       " ('mobilising', 0.6835558414459229),\n",
+       " ('mezzanine', 0.6796742081642151),\n",
+       " ('mobilise', 0.6683375835418701),\n",
+       " ('blended', 0.6679754257202148),\n",
+       " ('attract', 0.6674732565879822),\n",
+       " ('debt', 0.6533348560333252),\n",
+       " ('leverage', 0.6512179374694824),\n",
+       " ('non-concessional', 0.646682620048523),\n",
+       " ('organi-sations', 0.6398669481277466),\n",
+       " ('repayable', 0.6380059719085693),\n",
+       " ('loan', 0.6368876099586487),\n",
+       " ('blend', 0.6358164548873901),\n",
+       " ('risk-management', 0.6299599409103394),\n",
+       " ('repayable_finance', 0.6278873682022095),\n",
+       " ('financier', 0.6156778931617737),\n",
+       " ('investor', 0.6143190264701843)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,164 +207,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3076f2b5-b6de-434f-9573-271f0eb760f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('financing', 0.6960784196853638),\n",
-       " ('investment', 0.6266279816627502),\n",
-       " ('commercial', 0.6079007387161255),\n",
-       " ('mezzanine', 0.5823829770088196),\n",
-       " ('blend', 0.58002769947052),\n",
-       " ('blended', 0.5657579302787781),\n",
-       " ('leverage', 0.5431210398674011),\n",
-       " ('tri', 0.5420008897781372),\n",
-       " ('repayable', 0.5408057570457458),\n",
-       " ('non-concessional', 0.5402007102966309),\n",
-       " ('concessional', 0.5383909344673157),\n",
-       " ('concessionary', 0.5347957611083984),\n",
-       " ('karana', 0.5289083123207092),\n",
-       " ('repayable_finance', 0.5284245610237122),\n",
-       " ('hita', 0.5270977020263672),\n",
-       " ('investor', 0.5215573906898499),\n",
-       " ('mobilise', 0.5163821578025818),\n",
-       " ('risk-mitigation', 0.5159808397293091),\n",
-       " ('de-risk', 0.5150316953659058),\n",
-       " ('development_bank_of_the_philippines', 0.5147721767425537)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d_testmodel.wv.most_similar(positive=['finance'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "04991334-6e99-4898-a176-d07ede459263",
    "metadata": {},
    "outputs": [],
    "source": [
-    "e_testmodel = gensim.models.Word2Vec.load(filepath_100_30)\n",
-    "f_testmodel = gensim.models.Word2Vec.load(filepath_200_30)"
+    "e_testmodel = gensim.models.Word2Vec.load(filepath_100_30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4a2f021f-0aea-4330-a82f-35d9d6d06e2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('foundation/arup', 0.7402074337005615),\n",
-       " ('centennial', 0.6189465522766113),\n",
-       " ('kassel', 0.587670087814331),\n",
-       " ('foundation_for_applied_water_research', 0.5441530346870422),\n",
-       " ('gauvin', 0.5439850687980652),\n",
-       " ('kase', 0.5407016277313232),\n",
-       " ('grantham', 0.5347704291343689),\n",
-       " ('mode-of-action-based', 0.5277999043464661),\n",
-       " ('climate-resilient', 0.527142345905304),\n",
-       " ('janssenal', 0.5230787396430969),\n",
-       " ('the_smart_water_grid', 0.5219584703445435),\n",
-       " ('craft', 0.5201272964477539),\n",
-       " ('district_of_colombia', 0.518730878829956),\n",
-       " ('simoni', 0.5153480172157288),\n",
-       " ('oost', 0.5131468176841736),\n",
-       " ('battery', 0.5124571323394775),\n",
-       " ('letzel', 0.5098364353179932),\n",
-       " ('surrogate', 0.5080912709236145),\n",
-       " ('macroeconomic_growth', 0.5072043538093567),\n",
-       " ('hilary_delage', 0.5061073899269104)]"
+       "[('financing', 0.7811167240142822),\n",
+       " ('commercial', 0.740609884262085),\n",
+       " ('investment', 0.7234548926353455),\n",
+       " ('blended', 0.6920834183692932),\n",
+       " ('attract', 0.684935450553894),\n",
+       " ('mobilise', 0.6698009967803955),\n",
+       " ('investor', 0.6550965309143066),\n",
+       " ('mezzanine', 0.6516242027282715),\n",
+       " ('concessional', 0.6506146788597107),\n",
+       " ('repayable', 0.6481335163116455),\n",
+       " ('debt', 0.6457288861274719),\n",
+       " ('repayable_finance', 0.6439858078956604),\n",
+       " ('leverage', 0.6382477283477783),\n",
+       " ('blend', 0.6378662586212158),\n",
+       " ('loan', 0.6332045793533325),\n",
+       " ('vipa', 0.6283848285675049),\n",
+       " ('financier', 0.6255854368209839),\n",
+       " ('organi-sations', 0.6253201365470886),\n",
+       " ('blended_finance', 0.6248964667320251),\n",
+       " ('mobilising', 0.6224984526634216)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e_testmodel.wv.most_similar(positive=['rockefeller'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "198369f4-a908-442a-addb-e38da3345053",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('foundation/arup', 0.6886305809020996),\n",
-       " ('centennial', 0.6167237162590027),\n",
-       " ('meeting/workshop', 0.46759840846061707),\n",
-       " ('cri', 0.4624117314815521),\n",
-       " ('circle_of_blue', 0.454412579536438),\n",
-       " ('westhoek', 0.45238032937049866),\n",
-       " ('kassel', 0.4514877498149872),\n",
-       " ('iiasa', 0.45003455877304077),\n",
-       " ('duhon', 0.44657039642333984),\n",
-       " ('intergovernmental_panel_on', 0.4455540180206299),\n",
-       " ('chartered', 0.44546106457710266),\n",
-       " ('hargrove', 0.44524097442626953),\n",
-       " ('macroeconomic_growth', 0.44167494773864746),\n",
-       " ('kase', 0.4379238486289978),\n",
-       " ('roy', 0.43525102734565735),\n",
-       " ('srex', 0.4349420666694641),\n",
-       " ('deltares_science_institute', 0.4344605803489685),\n",
-       " ('siegel', 0.4343560039997101),\n",
-       " ('non-targeted', 0.43401914834976196),\n",
-       " ('foundation', 0.4324767589569092)]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_testmodel.wv.most_similar(positive=['rockefeller'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "3f719748-0b68-4f96-9440-e96d39b37b31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g_testmodel = gensim.models.Word2Vec.load(filepath_200_40_30)\n",
-    "h_testmodel = gensim.models.Word2Vec.load(filepath_100_40_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a343e974-13d2-4ea1-b979-d99499ba140c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g_testmodel.wv.most_similar(positive=['rockefeller'], topn=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bedd9952-7dbb-4ca4-92e6-11d284ffdb2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h_testmodel.wv.most_similar(positive=['inei'], topn=20)"
+    "e_testmodel.wv.most_similar(positive=['finance'], topn=20)"
    ]
   }
  ],
